Fixed more layout issues

--- a/src/assets/css/styles.scss
+++ b/src/assets/css/styles.scss
@@ -43,10 +43,6 @@ body.urdu {
   font-family:  "Nafees-Nastalique", "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif; 
 }
 
-main{
-  padding: 0;
-}
-
 .urdu{
   font-family:  "Nafees-Nastalique", "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif; 
 }
